[tool.poetry]
name = "kekas"
version = "0.1.19"
description = "Just another DL library."
authors = ["Aleksandr Belskikh <belskikh.aleksandr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.2"
torchvision = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-comprehensions = "^2.2"
flake8-quotes = "^2.1"
flake8-bugbear = "^19.8"
flake8-eradicate = "^0.2.2"
flake8-fixme = "^1.1"
flake8-mutable = "^1.2"

[tool.poetry.scripts]
check = "flake8 ."

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
